fix login and task hour
